--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
-      "program": "${workspaceFolder}/src/services/Catalog/Catalog.API/bin/Debug/net5.0/Catalog.API.dll",
+      "program": "${workspaceFolder}/src/services/Basket/Basket.API/bin/Debug/net5.0/Basket.API.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/src/services/Catalog/Catalog.API",
+      "cwd": "${workspaceFolder}/src/services/Basket/Basket.API",
       "stopAtEntry": false,
       "serverReadyAction": {
         "action": "openExternally",
@@ -32,7 +32,7 @@
       "request": "launch",
       "preLaunchTask": "docker-run: debug",
       "netCore": {
-        "appProject": "${workspaceFolder}/src/services/Catalog/Catalog.API/Catalog.API.csproj"
+        "appProject": "${workspaceFolder}/src/services/Basket/Basket.API/Basket.API.csproj"
       }
     }
   ]
