--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -36,6 +36,12 @@ services:
       context: .
       dockerfile: Services/Discount/Discount.API/Dockerfile
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.Grpc/Dockerfile
+
 
 volumes:
   mongo_data:
